--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,7 +9,9 @@
             "type": "cppdbg",
             "request": "launch",
             "program": "${workspaceFolder}/push_swap",
-            "args": ["2", "1", "3"],
+            "args": [
+				"-1","1","0"
+			],
             "stopAtEntry": false,
             "cwd": "${workspaceFolder}",
             "environment": [],
